--- a/Vite/learn-reactJS/package.json
+++ b/Vite/learn-reactJS/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-router": "^7.8.0",
+    "react-router-dom": "^7.8.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
